@@ -8,10 +8,10 @@ extends 'Lacuna::DB::Result::Building::Module';
 use constant controller_class => 'Lacuna::RPC::Building::Warehouse';
 use constant image => 'warehouse';
 use constant name => 'Warehouse';
-use constant food_storage   => 4000;
-use constant water_storage  => 4000;
-use constant ore_storage    => 4000;
-use constant energy_storage => 4000;
+use constant food_storage   => 6000;
+use constant water_storage  => 6000;
+use constant ore_storage    => 6000;
+use constant energy_storage => 6000;
 use constant energy_consumption => 80;
 use constant water_consumption => 80;
 use constant food_consumption => 80;
